# coverage2GHChecksAnnotations.py

./: ReadMe.md  pyproject.toml  setup.cfg
.ci/: pythonPackagesToInstallFromGit.txt
.github/workflows/: CI.yml
coverage2GHChecksAnnotations/: __init__.py  __main__.py  reportCoverage.py
