[metadata]
name = coverage2GHChecksAnnotations
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/coverage2GHChecksAnnotations.py
description = Transforms coverage info from coveragepy database into GitHub annotations.
long_description = file: ReadMe.md
keywords = coverage2GHChecksAnnotations
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
install_requires =
	coverage @ git+https://github.com/nedbat/coveragepy.git
	piechart @ git+https://github.com/KOLANICH/piechart.py.git

setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[options.extras_require]
reportCoverage = miniGHAPI @ git+https://github.com/KOLANICH/miniGHAPI.py

[options.entry_points]
console_scripts =
	coverage2GHChecksAnnotations = coverage2GHChecksAnnotations.__main__:main
	coverageReportGHChecksAnnotations = coverage2GHChecksAnnotations.reportCoverage:main
